ev/p3/confs/bootstrap/argocd-ingress.yml
# **************************************************************************** #
#                                                                              #
#                                                         :::      ::::::::    #
#    argocd-ingress.yml                                 :+:      :+:    :+:    #
#                                                     +:+ +:+         +:+      #
#    By: nhayoun <nhayoun@student.1337.ma>          +#+  +:+       +#+         #
#                                                 +#+#+#+#+#+   +#+            #
#    Created: 2026/08/26 18:36:00 by nhayoun           #+#    #+#              #
#    Updated: 2026/08/26 18:36:18 by nhayoun          ###   ########.fr        #
#                                                                              #
# **************************************************************************** #

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
